--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -10,6 +10,7 @@
   border-bottom-right-radius: 24px;
   padding-bottom: 12px;
   background-color: rgba(19, 19, 19, 1);
+  padding-bottom: 27px;
 }
 
 .header-scrolled {
@@ -27,24 +28,25 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 2rem 3rem;
+  padding: 1.5rem 2rem;
   margin: 0;
-  height: 8rem;
+  height: 5rem;
   width: 100%;
   box-sizing: border-box;
 }
 
 .nav-container .line {
   position: absolute;
-  bottom: 3px;
   right: 30px;
   left: auto;
+  margin-top: 90px;
   height: 3px;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   width: 96%;
 }
 
+/* Стили для поисковой формы */
 .nav-container .search-container {
   position: relative;
   width: 100%;
@@ -57,12 +59,13 @@
 }
 
 .nav-container .search-form {
-  flex: 0 1 420px;
-  margin: 0 48px;
-  position: relative;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 420px;
   background: transparent;
   height: fit-content;
-  align-self: center;
 }
 
 .nav-container .search-input {
@@ -100,15 +103,15 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.75rem;
   text-decoration: none;
   flex-shrink: 0;
 }
 
 .logo-image {
   position: relative;
-  width: 56px;
-  height: 56px;
+  width: 42px;
+  height: 42px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -118,19 +121,18 @@
   width: 72px;
   height: 72px;
   object-fit: contain;
-  transform: scale(1.3);
 }
 
 .logo-text {
   color: white;
-  font-size: 2.75rem;
-  font-weight: 700;
+  font-size: 1.5rem;
+  font-weight: 800;
   letter-spacing: -0.01em;
 }
 
 .neo-text {
   color: #00ffbb;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 .auth-container {
@@ -148,7 +150,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  margin-top: 2px;
+  margin-top: 2px; /* Выравнивание по центру с текстом */
 }
 
 .sign-in-btn {
@@ -207,6 +209,7 @@
   transform-origin: left;
 }
 
+/* Анимация при активном состоянии */
 .mobile-menu.active .menu-icon-wrapper {
   transform: rotate(-45deg);
 }
